fix Font,sponsor spacing,icons & add timeline

--- a/Hackonix-Website/static/css/faq-styles.css
+++ b/Hackonix-Website/static/css/faq-styles.css
@@ -20,10 +20,10 @@
 }
 
 .faq-title {
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
   letter-spacing: 0px;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight:bolder;
   margin-bottom: 4rem;
 }
 h4 {
@@ -138,7 +138,7 @@ ________________________________________*/
 }
 
 .accordion span:target ~ .accordion-content {
-  background-color: #092645;;
+  background-color: #092645;
   display: block;
   height: auto;
   padding: 2vh 2vw 2vh 2vw;
