--- a/Hackonix-Website/static/css/prizes-styles.css
+++ b/Hackonix-Website/static/css/prizes-styles.css
@@ -2,7 +2,7 @@
   font-family: "Roboto", Helvetica, sans-serif;
   letter-spacing: 0px;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: bolder;
   margin-bottom: 4rem;
 }
 
