--- a/Hackonix-Website/static/css/sponsor-styles-2.css
+++ b/Hackonix-Website/static/css/sponsor-styles-2.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+
 .sponsors-cards {
   display: grid;
   width: 80%;
   position: relative;
   margin: 0 auto;
-  grid-template-rows: 1fr auto 1fr auto 1fr auto 1fr auto 1fr auto;
+  grid-template-rows: repeat(1fr auto);
   grid-template-columns: 1fr;
   row-gap: 2rem;
 }
@@ -13,6 +15,9 @@
   justify-content: center;
   align-items: center;
   font-size: 3rem;
+  font-weight: bolder;
+  font-family: "Roboto", sans-serif;
+  padding: 4rem 0rem;
 }
 
 .sponsor-single {
@@ -28,13 +33,13 @@
 }
 
 .grid-platinum {
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
 }
 .grid-title {
   grid-template-columns: 1fr 1fr 1fr;
 }
 .grid-associate {
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 .grid-media {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
