--- a/Hackonix-Website/static/css/style.css
+++ b/Hackonix-Website/static/css/style.css
@@ -539,7 +539,7 @@ img {
   font-family: "Roboto", Helvetica, sans-serif;
   letter-spacing: 0px;
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: bolder;
   margin-bottom: 4rem;
 }
 
@@ -753,7 +753,7 @@ img {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0px;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: bolder;
   margin-bottom: 4rem;
 }
 
@@ -801,7 +801,7 @@ img {
   font-family: "Roboto", Helvetica, sans-serif;
   letter-spacing: 0px;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: bolder;
   margin-bottom: 4rem;
 }
 
